<resources>
    <string name="mine">我的</string>
    <string name="left_user_pucture_prompt">首页好友头像</string>
    <string name="arrow_prompt">箭头</string>
    <string name="line_prompt">线</string>
    <string name="image_prompt">图标</string>
    <string name="app_name">易打工</string>
    <string name="advicefeedback">意见反馈</string>
    <string name="app">llkc</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="main_left">找工作</string>
    <string name="main_right">新鲜事</string>
    <string name="main_center">找培训</string>
    <string name="square">发现</string>
    <string name="about">关于</string>
    <string name="per_image">头像</string>
    <string name="per_iamge_text">上传/更换头像</string>
    <string name="per_sign_prompt">个性签名</string>
    <string name="per_info_prompt">基本信息</string>
    <string name="per_text_name_prompt">昵&#160;&#160;&#160;&#160;称</string>
    <string name="per_sex_prompt">性&#160;&#160;&#160;&#160;别</string>
    <string name="per_date_prompt">生&#160;&#160;&#160;&#160;日</string>
    <string name="per_addres_prompt">所在地</string>
    <string name="per_email_prompt">&#160;Email</string>
    <string name="per_tel_prompt">手&#160;&#160;&#160;&#160;机</string>
    <string name="hint_email_prompt">请填写您的邮箱</string>
    <string name="position_tipe">定位:</string>
    <string name="about_jobs">附近岗位</string>
    <string name="vocational_training">职业培训</string>
    <string name="job_fair">招聘会</string>
    <string name="post_tipe">岗位搜索</string>
    <string name="post_hint">设置搜索条件</string>
    <string name="common_tipe">热门 :</string>
    <string name="job_peonumber">招工人数:</string>
    <string name="job_address">地址:</string>
    <string name="advancedsearch_hint">每天更新2万条招工信息</string>
    <string name="keywords_hint">关键字</string>
    <string name="keywords_edit_hint">可输入关键字筛选，如五险一金，包吃住</string>
    <string name="job_type_name">工种</string>
    <string name="job_type_hint">请选择工种</string>
    <string name="addres_type_name">工作地点</string>
    <string name="addres_type_hint">请选择工作地点</string>
    <string name="search_button">搜索</string>
    <string name="details_job_num_hint">人    数:</string>
    <string name="details_job_money_hint">月    薪:</string>
    <string name="details_job_company_hint">公    司:</string>
    <string name="deatils_job_contacts_hint">联系人:</string>
    <string name="details_phone_hint">联系电话:</string>
    <string name="details_phone_button">查看完整号码</string>
    <string name="detail_job_requirements_hint">岗位要求</string>
    <string name="details_job_adress_hint">工作地址</string>
    <string name="details_other">查看该地址附近其他岗位</string>
    <string name="details_job_profile_hint">公司介绍</string>
    <string name="details_share_hint">推荐给朋友</string>
    <string name="details_share_friends_text">发送到我的工友帮</string>
    <string name="details_share_sms_text">短信形式发送到朋友手机上</string>
    <string name="details_report_hint">温馨提示</string>
    <string name="tel_button">立即拨打电话咨询</string>
    <string name="sms_button">短信联系</string>
    <string name="details_report_text">&#160;&#160;&#160;&#160;凡告知“收取服装费、押金、报名费”等各种费用的信息均有欺诈嫌疑，请保持警惕。如遇到类似情况，请举报</string>
    <string name="jobfair_tel_hint">联系人：</string>
    <string name="jobfair_fixed_line_hint">固定电话：</string>
    <string name="jobfair_venues_hint">举办场馆：</string>
    <string name="jobfair_adress_hint">地址：</string>
    <string name="clear_cache_prompt">清除缓存</string>
    <string name="clear_cache_text">当前共有缓存0k</string>
    <string name="version_update_prompt">版本更新</string>
    <string name="version_update_text">当前版本</string>
    <string name="version_update_text_newest">您当前已经是最新版本</string>
    <string name="newest_ver">最新版本 : </string>
    <string name="btn_update">立即更新</string>
    <string name="btn_nexttime">下次再说</string>
    <string name="update_prompt">更新提示</string>
    <string name="about_prompt">关于</string>
    <string name="about_text">开发者与联系方式</string>
    <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_tap_label">下拉可以刷新</string>
    <string name="pull_to_refresh_update">最近更新：</string>
    <string name="load_ing">加载中···</string>
    <string name="jobfair_detail_venue_hint">举办场馆：</string>
    <string name="jobfair_detail_date_hint">举办时间：</string>
    <string name="jobfair_detail_contacts_hint">联系人：</string>
    <string name="jobfair_detail_job_requirements_hint">招聘会详情：</string>
    <string name="jobfair_details_job_adress_hint">详细地址：</string>
    <string name="login_name">请输入用户名</string>
    <string name="login_pass">&#160;请输入密码</string>
    <string name="reg_button">注册</string>
    <string name="login_button">登录</string>
    <string name="logining">正在登录...</string>
    <string name="check_hint">自动登录</string>
    <string name="find_pass">忘记密码？</string>
    <string name="old_password">请输入旧密码</string>
    <string name="new_password">请输入新密码</string>
    <string name="repeat_password">请再一次输入新密码</string>
    <string name="modify_button">修改密码</string>
    <string name="reg_name_prompt">用户名:</string>
    <string name="reg_name">英文、数字或下划线</string>
    <string name="reg_email_prompt">邮&#160;&#160;&#160;&#160;箱:</string>
    <string name="reg_email">请输入邮箱</string>
    <string name="reg_pass_prompt">密&#160;&#160;&#160;&#160;码:</string>
    <string name="reg_pass">6-16数字</string>
    <string name="reg_reg_button">快速注册</string>
    <string name="individual_prompt">点击编辑个人资料</string>
    <string name="modify_password">修改密码</string>
    <string name="modify_personalinfo">修改个人资料</string>
    <string name="share_prompt">账号绑定</string>
    <string name="sina_text_prompt">新浪微博</string>
    <string name="sina_text">未绑定</string>
    <string name="qq_text_prompt">腾讯微博</string>
    <string name="qq_text">未绑定</string>
    <string name="r_button">注销账号</string>
    <string name="set_date_btn_sure_prompt">请选择日期</string>
    <string name="set_date_btn_sure">确定</string>
    <string name="find_name_prompt">账户:</string>
    <string name="find_name">请输入用户名</string>
    <string name="find_email_prompt">邮箱:</string>
    <string name="find_email">请输入邮箱</string>
    <string name="find_pass_button">找回密码</string>
    <string name="cities_layout_prompt">选择城市</string>
    <string name="cities_button">&#160;&#160;&#160;&#160;确定&#160;&#160;&#160;&#160;</string>
    <string name="corporate_name">单位名称 | </string>
    <string name="corporate_address">单位地址 | </string>
    <string name="corporate_license">营业执照 | </string>
    <string name="corporate_intro">单位简介 | </string>
    <string name="upload">点击上传</string>
    <string name="jpost_name">岗位标题 | </string>
    <string name="jpost_num">招聘人数 | </string>
    <string name="jpost_salary">月薪 | </string>
    <string name="jpost_type">岗位类别 | </string>
    <string name="jpost_describ">岗位描述 | </string>
    <string name="jpost_demand">岗位要求 | </string>
    <string name="deadline">有效期限 | </string>
    <string name="jpost_addr">工作地址 | </string>
    <string name="linkman">联系人 | </string>
    <string name="phone">联系电话 | </string>
    <string name="jpost_tag">岗位描述 | </string>
    <string name="tag">标签项 | </string>
    <string name="area">所在地 | </string>
    <string name="myresume"> 我的简历 </string>
    <string name="create_resume"> 创建简历 </string>
    <string name="modify_resume"> 编辑简历 </string>
    <string name="please_select">请选择</string>
    <string name="publish_job">发布岗位</string>
    <string name="publish_job_info">发布岗位资料</string>
    <string name="text_num_limited_30">不超过30个字</string>
    <string name="corporate_phone_hint">请填写手机或固定电话</string>
    <string name="corporate_address_hint">请填单位地址</string>
    <string name="corporate_intro_hint">请填单位简介，不超过100个字</string>
    <string name="commit_auth_data">提交认证资料</string>
    <string name="done_auth_progress">已完成认证流程</string>
    <string name="check_info_center">查看消息中心</string>
    <string name="auth_info">  \t\t您已完成企业认证流程，请耐心等待审核。审核时间为1&#8211;3个工作日。如果通过认证，将在消息中心通知您。</string>
    <string name="text_num_limited_10">不超过10个字</string>
    <string name="text_num_limited2_10">不少于10个字</string>
    <string name="text_num_limited2_20">不少于20个字</string>
    <string name="ren">人</string>
    <string name="select_classes">选择分类</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="revoke">撤销</string>
    <string name="un_corporate_user_cont">只有企业用户才能发布岗位\n您可以注销当前账号，重新注册企业用户</string>
    <string name="unregist">注销当前账号</string>
    <string name="fillin_auth_info">填写认证资料</string>
    <string name="aunthencition_modify">企业认证资料修改</string>
    <string name="camera">相机拍摄</string>
    <string name="phoneGallery">手机相册</string>
    <string name="authing">等待审核中</string>
    <string name="jpost_manage">岗位管理</string>
    <string name="overdue">已过期</string>
    <string name="published">已发布</string>
    <string name="request">请求</string>
    <string name="system">系统</string>
    <string name="msg">消息</string>
    <string name="ignore">忽略</string>
    <string name="agree">同意</string>
    <string name="have_agree">已同意</string>
    <string name="have_join">已加入</string>
    <string name="realname">真实姓名:</string>
    <string name="pleasepull">请填写</string>
    <string name="Gender">性别:</string>
    <string name="birthidy">出生年份:</string>
    <string name="education">最高学历:</string>
    <string name="workexperience">工作经验:</string>
    <string name="telnumber">手机号码:</string>
    <string name="expectpost">期望职位:</string>
    <string name="positionsalary">期望薪资:</string>
    <string name="selfassessment">自我评价:</string>
    <string name="fullselfinfor">填写自我评价,可以让雇主更了解你</string>
    <string name="individualcenter">个人简历</string>
    <string name="individualinfo">修改个人资料</string>
    <string name="modifyresume">修改简历</string>
    <string name="hinit_input">请填写</string>
    <string name="hinit_select">请选择</string>
    <string name="name_empty">请填写您的名字！</string>
    <string name="phone_empty">请填写您的联系电话！</string>
    <string name="miaoqian">秒前</string>
    <string name="fenqian">分钟前</string>
    <string name="shiqian">小时前</string>
    <string name="jianli">的简历</string>
    <string name="connect_timeout">连接超时</string>
    <string name="net_error">网络异常，请稍候</string>
    <string name="group_member">群成员</string>
    <string name="userinfo">个人资料</string>
    <string name="exit">确认退出吗？</string>
    <string name="exit_app">退出应用</string>
    <string name="prompt">提示</string>
    <string name="sure">确认</string>
    <string name="cancel">取消</string>
    <string name="net_error2">您的网络链接异常，请重试</string>
    <string name="xinxianshi">新鲜事</string>
    <string name="news_of_work">打工动态</string>
    <string name="no_function">暂无此功能！</string>
    <string name="set">设置</string>
    <string name="test_version">正在检测版本，请稍候...</string>
    <string name="net_error3">网络异常，请稍候再试</string>
    <string name="remove_member">您确定将该成员移出本群吗？</string>
    <string name="remove_me">不可以移除自己！</string>
    <string name="creating">创建中...</string>
    <string name="remove_now">正在移除,请稍后...</string>
    <string name="remove_fail">移除失败！</string>
    <string name="search_work">查找工友帮</string>
    <string name="search_add_friend">查询/添加好友</string>
    <string name="report">举报页面</string>
    <string name="report_con">请选择举报内容</string>
    <string name="name_nonull">用户名不能为空</string>
    <string name="home">主页</string>
    <string name="enterprise_authentication_why">什么是企业认证？</string>
    <string name="enterprise_authentication_con">企业认证是企业用户认证企业身份，并可以</string>
    <string name="search_remuse">搜索简历</string>
    <string name="authentication_step">认证步骤：</string>
    <string name="authentication_step1">１）填写认证资料</string>
    <string name="authentication_step2">２）等待审核</string>
    <string name="authentication_step3">３）通过审核</string>
    <string name="authentication_step4">４）发布岗位/搜索简历</string>
    <string name="authentication_now">马上认证</string>
    <string name="contacts">通讯录</string>
</resources>