<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efefef"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".CorporateActivity" >

    <include layout="@layout/title_c" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="您不是企业用户"
        android:textColor="#373737"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="@drawable/home_recom_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|left"
            android:lineSpacingExtra="8dp"
            android:text="@string/enterprise_authentication_why"
            android:textColor="#23b800"
            android:textSize="18sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|left"
            android:lineSpacingExtra="8dp"
            android:text="@string/enterprise_authentication_con"
            android:textColor="#898989"
            android:textSize="15sp" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/corporate_img_job"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/point_head" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/corporate_img_job"
                android:text="@string/publish_job"
                android:textColor="#898989"
                android:textSize="15sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" >

            <ImageView
                android:id="@+id/corporate_img_remuse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/point_head" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/corporate_img_remuse"
                android:text="@string/search_remuse"
                android:textColor="#898989"
                android:textSize="15sp" />
        </RelativeLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical|left"
            android:lineSpacingExtra="8dp"
            android:text="@string/authentication_step"
            android:textColor="#23b800"
            android:textSize="18sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|left"
            android:lineSpacingExtra="8dp"
            android:text="@string/authentication_step1"
            android:textColor="#898989"
            android:textSize="15sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|left"
            android:lineSpacingExtra="8dp"
            android:text="@string/authentication_step2"
            android:textColor="#898989"
            android:textSize="15sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|left"
            android:lineSpacingExtra="8dp"
            android:text="@string/authentication_step3"
            android:textColor="#898989"
            android:textSize="15sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|left"
            android:lineSpacingExtra="8dp"
            android:text="@string/authentication_step4"
            android:textColor="#898989"
            android:textSize="15sp" />
    </LinearLayout>

    <Button
        android:id="@+id/corporate_btn_authentication_now"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_margin="12dp"
        android:background="@drawable/bg_rounded_red"
        android:text="@string/authentication_now"
        android:textColor="#ffffff"
        android:textSize="18sp" />

</LinearLayout>