<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical" >

    <include
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        layout="@layout/other_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/login_bg"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/find_name_prompt"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/find_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/find_name"
            android:textSize="16sp" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/login_bg"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/find_email_prompt"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/find_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/find_email"
            android:inputType="textEmailAddress"
            android:textSize="16sp" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/find_pass_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/login_button"
        android:text="@string/find_pass_button"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>