<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical" >

    <include layout="@layout/other_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/white_rounded"
        android:gravity="center_vertical"
        android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/reg_name_prompt"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/reg_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:digits="1234567890qwertyuiopasdfghjklzxcvbnm_"
            android:ems="10"
            android:hint="@string/reg_name" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/white_rounded"
        android:gravity="center_vertical"
        android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/reg_email_prompt"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/reg_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/reg_email"
            android:inputType="textEmailAddress" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/white_rounded"
        android:gravity="center_vertical"
        android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/reg_pass_prompt"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/reg_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/reg_pass"
            android:inputType="number" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <RadioGroup
        android:id="@+id/registration_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:visibility="gone" >

        <RadioButton
            android:id="@+id/domestic_consumer "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="普通用户"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/enterprise_users"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="企业用户"
            android:textColor="@color/black" />
    </RadioGroup>

    <Button
        android:id="@+id/reg_reg_button"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/green_rounded"
        android:text="@string/reg_reg_button"
        android:textColor="@color/white"
        android:textSize="20sp" />

</LinearLayout>